<resources>
    <string name="app_name">AgendaDent</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="sobreNome">Sobrenome</string>
    <string name="senha">Senha</string>
    <string name="senhaRepita">Repita a senha</string>
    <string name="Cep">Cep</string>
    <string name="senha2">Repita a Senha</string>
    <string name="rua">Rua</string>
    <string name="Numero">Número</string>
    <string name="Complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="inscricaoCRO">Inscrição CRO</string>
    <string name="FotoPerfil">Foto Perfil</string>
    <string name="Pais">Pais</string>
    <string name="tipoUser">Tipo Usuario</string>
    <string name="ok">Ok</string>
    <string name="Aviso">Aviso</string>
    <string name="Sair">Sair</string>
    <string name="sim">Sim</string>
    <string name="Aguarde">Aguarde</string>
    <string name="Carregando">Carregando</string>
    <string name="nao">Não</string>
    <string name="BuscarCEP">Buscar pelo CEP</string>
    <string name="PerguntaBuscarCEP">Você deseja buscar as informações através do CEP?</string>
    <string name="erro">Erro</string>
    <string name="cepInvalido">O campo \"Cep\" está inválido.</string>
    <string name="CEPNaoencontrado">Cep não encontrado.</string>
    <string name="headerDialogFoto">Tirar Foto</string>
    <string name="subTitleDialogFoto">Selecionar da galeria</string>
    <string name="cancelDialogFoto">cancelar</string>
    <string name="titleDialogFoto">Adicionar Imagem</string>
    <string name="buscar">Buscar</string>
    <string name="novasenha">Nova senha</string>
    <string name="repitanovasenha">Repita a nova senha</string>
    <string-array name="picker_Estado">
        <item> </item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <string-array name="tipo_user">
        <item>Paciente</item>
        <item>Dentista</item>
    </string-array>
    <string-array name="picker_tipo_consulta">
        <item>Particular</item>
        <item>Convênio</item>
        <item>SUS</item>
    </string-array>
    <string-array name="picker_planos_saude">
        <item>Selecione um plano de saúde:</item>
        <item>Amil Dental</item>
        <item>Bello Dente</item>
        <item>Bradesco Dental</item>
        <item>Doctor Clin</item>
        <item>Interodonto</item>
        <item>Metlife</item>
        <item>Odonto Empresas</item>
        <item>SulAmerica Odonto</item>
        <item>Uniodonto</item>
    </string-array>
    <string-array name="picker_sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string-array name="picker_slots">
        <item>1 Horário</item>
        <item>2 Horários</item>
        <item>3 Horários</item>
        <item>4 Horários</item>
    </string-array>
    <string-array name="picker_especializacao">
        <item>Clinico Geral</item>
        <item>Endodontia</item>
        <item>Implantodontia</item>
        <item>Ortodontia</item>
        <item>Odontopediatria</item>
        <item>Odontologia Estética</item>
        <item>Protese</item>
    </string-array>
    <string name="nomeVazio">O campo \"Nome\" não está preenchido.</string>
    <string name="emailVazio">O campo \"Email\" não está preenchido.</string>
    <string name="senhaVazio">O campo \"Senha\" não está preenchido.</string>
    <string name="senhaVazio2">O campo \"Confirma Senha\" não está preenchido.</string>
    <string name="cpfVazio">O campo \"CPF\" não está preenchido.</string>
    <string name="emailInvalido">O campo \"Email\" está preenchido de forma incorreta.</string>
    <string name="senhaDiferen">Os campos de \"Senha\" estão diferentes.</string>
    <string name="senha6Caracter">O campo \"Senha\" deve possuir ao menos seis caracteres.</string>
    <string name="celularVazio">O campo \"Telefone Celular\" não está preenchido.</string>
    <string name="celulaInvalido">O campo \"Telefone Celular\" está preenchido de forma incorreta.</string>
    <string name="cpfInvalido">O campo \"CPF\" está preenchido de forma incorreta.</string>
    <string name="emailCadastrado">O email: %1$s \nJá está cadastrado no sistema.</string>
    <string name="Sucesso">Sucesso</string>
    <string name="emailConfirmacaoEnviado">Um email de confirmação foi enviado para seu email, ative sua conta antes de usar o sistema.</string>
    <string name="senhaFracaFireBase">A senha digitada possui um nivel de segurança muito baixo.</string>
    <string name="erroCadastroGenerico">Um erro ocorreu ao realizar o cadastro.</string>
    <string name="internetSemConexao">Não existe conexão com a internet</string>
    <string name="Salvar">Salvar</string>
    <string name="salvarMensagem">Você deseja salvar?</string>
    <string name="celular">Telefone Celular</string>
    <string name="cepVazio">O campo \"Cep\" não está preenchido.</string>
    <string name="estadoVazio">O campo \"Estado\" não está preenchido.</string>
    <string name="cidadeVazio">O campo \"Cidade\" não está preenchido.</string>
    <string name="bairroVazio">O campo \"Bairro\" não está preenchido.</string>
    <string name="ruaVazio">O campo \"Rua\" não está preenchido.</string>
    <string name="numeroVazio">O campo \"Número\" não está preenchido.</string>
    <string name="numeroInvalido">O campo \"Número\" não está preenchido.</string>
    <string name="erroEmailConfirmacao">Ocorreu um erro ao enviar o email de confirmação.</string>
    <string name="sobreNomeVazio">O campo \"Sobrenome\" não está preenchido.</string>
    <string name="fotoNaoRetirada">Nenhuma foto de perfil foi inserida.</string>
    <string name="inscricaoCROVazio">O campo \"Inscrição CRO\" não está preenchido.</string>
    <string name="LembrarEmail">Lembrar Email</string>
    <string name="loginProximo">Próximo</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="esqueciSenha">Esqueci a senha</string>
    <string name="recuperarSenha">Recuperar Senha</string>
    <string name="trocarSenhaDialog">Você deseja trocar a senha do email:\"</string>
    <string name="emailRecuperacao">Email de recuperação de senha enviado com sucesso.</string>
    <string name="emailRecuperacaoErro">Ocorreu um problema ao enviar o email de recuperação.</string>
    <string name="emailNaoConfirmadoMsg">Seu email ainda não foi confirmado, deseja reenviar o email de confirmação?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="cadastropendente">Seu cadastro será avaliado, ao ser aceito enviaremos um email de confirmação.</string>
    <string name="emailNaoConfirmadoMsgDentista">Seu email ainda não foi aprovado pela adminstração.</string>
    <string name="title_activity_config_agenda_adiciona">ConfigAgendaAdiciona</string>
    <string name="Segunda">Segunda-Feira</string>
    <string name="Terca">Terça-Feira</string>
    <string name="quarta">Quarta-Feira</string>
    <string name="quinta">Quinta-Feira</string>
    <string name="sexta">Sexta-Feira</string>
    <string name="sabado">Sábado</string>
    <string name="Domingo">Domingo</string>
    <string name="horario_de_termino">Horario de Termino:</string>
    <string name="horario_de_inicio">Horario de Inicio:</string>
    <string name="tempoDeConsulta">Tempo de Consulta</string>
    <string name="Adicionar">Adicionar</string>
    <string name="horarioColidiu">O horario colidiu com outro horario pré-existente.</string>
    <string name="dadosSalvosSucesso">Os dados foram salvos com sucesso</string>
    <string name="nomePaciente">Nome paciente:</string>
    <string name="tipo_consulta">Tipo:</string>
    <string name="data">Data:</string>
    <string name="horaConsulta">Hora:</string>
    <string name="duracaoConsultaDentista">Duração:</string>
    <string name="emailPaciente">Email paciente:</string>
    <string name="emailDentista">Email dentista:</string>
    <string name="telefonePaciente">Telefone paciente:</string>
    <string name="telefoneDentista">Telefone dentista:</string>
    <string name="nomeDentista">Nome dentista:</string>
    <string name="sobrenomeDentista">Sobrenome:</string>
    <string name="fotoPerfil">Foto perfil:</string>
    <string name="inscricaocro1">Inscrição CRO:</string>
    <string name="cep1">CEP:</string>
    <string name="buscaEstado">Estado:</string>
    <string name="cidadeDentista">Cidade:</string>
    <string name="bairroDentista">Bairro:</string>
    <string name="ruaDentista">Rua:</string>
    <string name="numeroDentista">Número:</string>
    <string name="complementoDentista">Complemento:</string>
    <string name="FotoPerfil1">Foto Perfil:</string>
    <string name="NaoHaConsultaMarcada">Não há uma consulta marcada.</string>
    <string name="ocuparConsulta">Você deseja marcar este horario como indisponivel?</string>
    <string name="trocaSenha">Trocar senha</string>
        <string name="emailTroca">Um email foi enviado para o seu email de cadastro com as instruções
        necessarias para realizar a troca de senha</string>
    <string name="emailTrocaErro">Ocorreu um erro ao tentar enviar o email de troca de senha.</string>
    <string name="nomeDentistaBusca">Nome dentista:</string>
    <string name="plano_saude">Plano de Saúde:</string>
    <string name="Especializacao">Especialização</string>
    <string name="proximo_mim">Próximo a mim.</string>
    <string name="outro_local">Outro local</string>
    <string name="endereco">Endereço</string>
    <string name="DistanciaMax">Distancia Máxima (Km):</string>
    <string name="TitleEspecializacao">Marque suas especializações:</string>
    <string name="TitleConvenios">Marque seus convênios:</string>
    <string name="missplan">Selecione um plano de saúde</string>
    <string name="missState">Selecione um estado.</string>
    <string name="nenhumDentistaEncontrado">Nenhum dentista foi encontrado.</string>
    <string name="dias">Dias:</string>
    <string name="tiposConsulta">Tipos de consultas:</string>
    <string name="Particular">Particular</string>
    <string name="sus">Sus</string>
    <string name="convenios">Convênios</string>
    <string name="ocupado">Ocupado</string>
    <string name="livre">Livre</string>
    <string name="indisponivell">Indisponivel para este tipo de consulta</string>
    <string name="confirmar">Confirma</string>
    <string name="cancela">Cancela</string>
    <string name="sexo">Sexo:</string>
    <string name="title_activity_teste">Map</string>
    <string name="local_Atual">Local Atual.</string>
    <string name="meu_endereco">Meu endereço    </string>
    <string name="distMin">Digite uma distancia minima.</string>
    <string name="endeNotCad">Endereço não cadastrado.</string>
    <string name="erroLocalAtual">Ocorreu um erro ao coletar sua localização atual, tente novamente ou digite seu endereço.</string>
    <string name="erroSuspender">Não é possivel suspender um horario no passado.</string>
    <string name="erroMarcarConsultaPassado">Não é possivel marcar uma consulta no passsado.</string>
    <string name="SlotsHorario">Quantidade de slots usados para a consulta:</string>
    <string name="PacienteCadastrado">Paciente já cadastrado no sistema?</string>
</resources>