<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tcc.agendadent.gui.CadastroGui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/divider_relative"
            android:showDividers="middle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/tipoUser"
                />

            <Spinner
                android:id="@+id/idCadastroTipoUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:entries="@array/tipo_user"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idCadastroEmail"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/idCadastroNome"
                    android:inputType="textCapWords"
                    android:hint="@string/nome"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/idCadastraSobreNome"
                    android:inputType="textCapWords"
                    android:hint="@string/sobreNome"
                    />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/sexo"
                />

            <Spinner
                android:id="@+id/idCadastroSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:fontFamily="sans-serif-light"
                android:entries="@array/picker_sexo"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/idCadastroSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPassword"
                    android:hint="@string/senha"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText android:id="@+id/idCadastroSenha2"
                    android:layout_width="match_parent"
                    android:fontFamily="sans-serif-light"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/senha2"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idCelular"
                    android:fontFamily="sans-serif-light"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:hint="@string/celular"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/exclusivoDentista"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/idCadastroCRO"
                        android:fontFamily="sans-serif-light"
                        android:inputType="numberDecimal"
                        android:hint="@string/inscricaoCRO"
                        />

                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/FotoPerfil"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/backgroundWhite">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_camera"
                        android:id="@+id/camera"

                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="50dp" />

                    <ImageView
                        android:layout_width="70dp"
                        android:id="@+id/fotoTela"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_photo"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="50dp" />
                </RelativeLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@drawable/divider_relative"
                    android:showDividers="middle"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/idCadastroPais"
                            android:enabled="false"
                            android:fontFamily="sans-serif-light"
                            android:maxLength="9"
                            android:hint="@string/Pais"
                            android:text="Brasil"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/idCadastroCep"
                            android:clickable="true"
                            android:maxLength="9"
                            android:fontFamily="sans-serif-light"
                            android:inputType="number"
                            android:hint="@string/Cep"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/estado"
                        />

                    <Spinner
                        android:id="@+id/idCadastroSpinnerEstado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:fontFamily="sans-serif-light"
                        android:entries="@array/picker_Estado"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/idCadastroCidade"
                            android:inputType="textCapSentences"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/cidade"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/idCadastroBairro"
                            android:clickable="true"
                            android:inputType="textCapSentences"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/bairro"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/idCadastroRua"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textCapSentences"
                            android:hint="@string/rua"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/idCadastroNumero"
                            android:clickable="true"
                            android:maxLength="7"
                            android:fontFamily="sans-serif-light"
                            android:inputType="number"
                            android:hint="@string/Numero"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/idCadastroComplemento"
                            android:clickable="true"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textCapSentences"
                            android:hint="@string/Complemento"
                            />
                    </android.support.design.widget.TextInputLayout>



                </LinearLayout>

            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/botaoCadastro"
                android:textColor="@color/backgroundWhite"
                android:background="@color/corBotao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="Criar Conta"/>
</LinearLayout>

</ScrollView>
