<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/idTextEditarPerfil"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:text="Editar Perfil"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        android:fontFamily="sans-serif-light"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/idAlterarNomePaciente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:hint="@string/nome"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-light"
            android:id="@+id/idAlterarSobrenomePaciente"
            android:inputType="textCapWords"
            android:hint="@string/sobreNome"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/idAlterarSenhaPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:inputType="textPassword"
            android:hint="@string/senha"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText android:id="@+id/idAlterarSenhaPaciente2"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-light"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/senha2"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idAlterarCelularPaciente"
            android:fontFamily="sans-serif-light"
            android:inputType="phone"
            android:maxLength="15"
            android:hint="@string/celular"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/botaoSalvarPaciente"
        android:textColor="@color/backgroundWhite"
        android:background="@color/corBotao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="Salvar"/>

</LinearLayout>